--- a/src/components/chat/channelSidebar.css
+++ b/src/components/chat/channelSidebar.css
@@ -12,9 +12,8 @@
 }
 
 .sidebar-header-search {
-  height: 58px;
-  background-color: var(--bg-sidebar);
-  border-bottom: 1px dashed var(--accent-primary);
+  background-color: var(--bg-sidebar-secondary);
+  border-bottom: 1px solid rgb(187 154 247 / 20%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,11 +29,11 @@
   border-radius: 8px;
   padding: 8px;
   opacity: 0.8;
-  text-align: center;
+  text-align: left;
 }
 
 .search-text {
-  font-size: 14px;
+  font-size: 12px;
   color: var(--text-muted);
   font-weight: 500;
 }
@@ -46,7 +45,7 @@
   display: flex;
   align-items: start;
   justify-content: center;
-  border-bottom: 1px dashed var(--accent-primary);
+  border-bottom: 1px solid rgb(187 154 247 / 20%);
   box-shadow: 0 4px 32px 5px rgb(162 116 244 / 20%);
   flex-shrink: 0;
 }
@@ -193,7 +192,7 @@
 .friends-button {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 15px;
   padding: 10px 16px;
   width: 100%;
   background: transparent;
@@ -203,6 +202,7 @@
   font-weight: 600;
   font-size: 16px;
   margin-top: 10px;
+  justify-content: flex-start;
 }
 
 .friends-button.active {
