--- a/src/components/chat/currentUser.css
+++ b/src/components/chat/currentUser.css
@@ -70,7 +70,7 @@
 }
 
 .volume-controls-panel {
-  background-color: rgb(138 131 166 / 90%);
+  background-color: var(--bg-alt);
   backdrop-filter: blur(10px);
   width: 100%;
   height: 60px;
