--- a/src/components/chat/friendsList.css
+++ b/src/components/chat/friendsList.css
@@ -7,14 +7,13 @@
 }
 
 .friends-header {
-  height: 58px;
+  height: 57px;
   background-color: var(--bg-panel);
-  border-bottom: 1px dashed var(--accent-primary);
+  border-bottom: 1px solid rgb(187 154 247 / 20%);
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
-  flex-shrink: 0;
   box-shadow: 0 4px 32px 0 rgb(162 116 244 / 20%);
 }
 
@@ -44,7 +43,7 @@
 .vertical-divider {
   width: 1px;
   height: 24px;
-  background-color: var(--border-color);
+  background-color: rgb(187 154 247 / 20%);
   margin: 0 5px;
 }
 
@@ -100,7 +99,8 @@
   display: flex;
   flex-direction: column;
   padding: 20px 30px;
-  border-right: 1px solid var(--border-color);
+  border-right: 1px solid rgb(187 154 247 / 20%);
+  border-left: 1px solid rgb(187 154 247 / 20%);
 }
 
 .friends-search-bar {
@@ -231,6 +231,11 @@
   gap: 10px;
 }
 
+.friend-actions .action-btn {
+  padding: 4px 8px;
+  border-radius: 4px;
+}
+
 .icon-action-btn {
   background: var(--bg-alt);
   border: 1px solid var(--border-color);
@@ -256,7 +261,6 @@
   width: 360px;
   background-color: var(--bg-panel);
   padding: 20px;
-  border-left: 1px solid var(--border-color);
   flex-shrink: 0;
 }
 
